--- a/web.config
+++ b/web.config
@@ -3,6 +3,7 @@
       <staticContent>
          <mimeMap fileExtension=".ko" mimeType="application/octet-stream" />
          <mimeMap fileExtension=".bz" mimeType="application/octet-stream" />
+         <mimeMap fileExtension=".sh" mimeType="application/octet-stream" />
       </staticContent>
    </system.webServer>
 </configuration>
