--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,6 @@
 # Set the default behavior, in case people don't have core.autocrlf set.
-* text=auto
-
-*.sh text eol=lf
+* binary
+*.sh binary
 *.ko binary
 *.bz binary
 
